# PhysMoE

./: .gitignore  README.md  predict.py  pyproject.toml  requirements.txt  train.py
configs/: nantong13.yaml
examples/: create_synthetic_data.py
examples/synthetic_station/: synthetic.csv
physmoe/: __init__.py  data.py  metrics.py  model.py  utils.py
scripts/: add_auto_physics.py  inspect_csv.py
